--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,7 +14,7 @@ http {
         }
 
         location /api/ {
-            proxy_pass http://backend:80/api/;
+            proxy_pass http://10.0.0.5:5000/api/;   # <--- replaced backend with private IP and port 5000
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
         }
